grammar/SwagLangParser.g4
parser grammar SwagLangParser;

options {
    tokenVocab = SwagLangLexer;
}

prog
    : stmts EOF
    ;

// TODO: deal with NWLN statement junk
stmts
    : (stmt | NWLN)*
    ;

stmt
    : pure_stmt
    ;

pure_stmt
    : func_decl
    | var_decl
    | interface_decl
    ;

code_block
    : L_CURLY (func_stmt NWLN)* R_CURLY
    ;

func_stmt
    : pure_func_stmt?
    ;

pure_func_stmt
    : func_decl
    | var_assign
    | func_call
    | var_decl
    | loop
    | conditional
    | break
    | continue
    | return
    | defer
    | expr
    ;

defer
    : DEFER expr
    ;

break
    : BREAK
    ;

continue
    : CONTINUE
    ;

return
    : RETURN (expr (COMMA expr)*)?
    ;

func_decl
    : return_type IDENT L_PAREN (param_decl (COMMA param_decl)* COMMA?)? R_PAREN code_block
    ;

return_type
    : type_ann
    | VOID
    | L_PAREN type_ann (COMMA type_ann)+ R_PAREN
    ;

map_type
    : MAP LT type_ann COMMA type_ann GT
    ;

set_type
    : SET LT type_ann GT
    ;

type_ann
    : (TYPE | map_type | set_type | IDENT) (L_BRACKET R_BRACKET)*
    ;

interface_decl
    : INTERFACE IDENT (EXTENDS IDENT (COMMA IDENT)*)? L_CURLY NWLN* (interface_field (NWLN+ interface_field)* NWLN*)? R_CURLY
    ;

interface_field
    : IDENT QUESTION? COLUMN type_ann
    ;

data
    : INT
    | STRING
    | FLOAT
    | BOOL
    | NULL
    | array
    | array_alloc
    | map
    | set
    | struct
    ;

array
    : L_BRACKET NWLN* (expr (COMMA NWLN* expr)* COMMA?)? NWLN* R_BRACKET
    ;

array_alloc
    : TYPE L_BRACKET expr R_BRACKET
    ;

map
    : L_CURLY L_CURLY NWLN* (map_field (COMMA NWLN* map_field)* COMMA?)? NWLN* R_CURLY R_CURLY
    ;

map_field
    : expr COLUMN expr
    ;

set
    : SET_START NWLN* (expr (COMMA NWLN* expr)* COMMA?)? NWLN* R_BRACKET
    ;

struct
    : L_CURLY NWLN* (struct_field (COMMA NWLN* struct_field)* COMMA?)? NWLN* R_CURLY
    ;

struct_field
    : IDENT COLUMN expr
    ;

no_acs_mode_var_decl
    : IDENT (COLUMN type_ann)? ASSIGN expr
    ;

var_ref
    : IDENT ((L_BRACKET expr R_BRACKET) | (DOT var_ref))*
    ;

var_decl
    : ACCESS_MOD IDENT (COLUMN type_ann)? ASSIGN expr
    | ACCESS_MOD IDENT (COMMA IDENT)+ ASSIGN func_call
    ;

var_assign
    : var_ref ( ASSIGN | ADD_ASSIGN | SUB_ASSIGN | MUL_ASSIGN | DIV_ASSIGN | MOD_ASSIGN ) expr
    | var_ref (COMMA var_ref)+ ASSIGN func_call
    ;

conditional_body
    : code_block
    ;

loop_body
    : code_block
    ;

loop
    : for_loop
    | while_loop
    | do_while_loop
    ;

while_loop
    : WHILE condition loop_body
    ;

do_while_loop
    : DO  loop_body  WHILE L_PAREN condition R_PAREN
    ;

for_loop
    : (FOR (no_acs_mode_var_decl? SEMICOL condition? SEMICOL (var_assign | expr)? ) | forin) loop_body
    ;

forin
    : FOR IDENT IN expr
    ;

conditional
    : IF condition conditional_body (ELSE_IF condition conditional_body)* (ELSE conditional_body)?
    ;

condition
    : expr
    ;

expr
    : L_PAREN expr R_PAREN
    | data
    | func_call
    | var_ref
    | var_ref (INC | DEC)
    | NOT expr
    | MINUS expr
    | <assoc=right> expr EXP expr
    | expr (MUL | DIV | MOD) expr
    | expr (PLUS | MINUS) expr
    | expr (GT | LT | EQ | GTE | LTE | NEQ) expr
    | expr AND expr
    | expr OR expr
    | expr QUESTION expr COLUMN expr
    ;

func_call
    : IDENT L_PAREN params R_PAREN
    ;

param_decl
    : IDENT COLUMN type_ann
    ;

params
    : (expr (COMMA expr )* COMMA?)?
    ;
